backend/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: water360-backend
  labels:
    app: water360
    tier: backend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: water360
    tier: backend
